syntax = "proto3";

option java_package = "com.budlee.httpstreaming";

// The greeter service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello ( HelloRequest) returns (  HelloReply) {}
  rpc SayHello2 ( HelloRequest) returns ( stream HelloReply) {}

}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}